--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.Design.NoActionBar"
+        android:theme="@style/MainTheme">
+        <activity
+            android:name=".MainActivity"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
